--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,7 +5,8 @@
     </div>
     <div class="panel-body">
       <div class="col-md-5">
-        <img class="img-thumbnail" [src]="this.catalService.host+'/photoProduct/'+currentProduct.id+'?ts='+getTS()"/>
+        <!--<img class="img-thumbnail" [src]="this.catalService.host+'/photoProduct/'+currentProduct.id+'?ts='+getTS()"/>-->
+        <img class="img-thumbnail img-rounded btn" style="transform: scaleX(-1);"   src="assets/images/Computer.png"/>
         <div *ngIf="this.authService.isAdmin()">
           <button *ngIf="!editPhoto" (click)="onEditPhoto(currentProduct)">
             <span class="glyphicon glyphicon-edit" style="color: blue">Changer photo</span>
