--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -96,3 +96,12 @@ body { padding-top: 700px; }
 @media (min-width: 768px) {
   .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
 }
+.about-text{
+  width: 180px;
+  height: 40px;
+  border-radius: 20px;
+  border:none;
+  outline:none;
+  background-color: blue;
+}
+
